[project]
name = "cf-logs"
version = "0.2.0"
description = "CLI for querying Cloudflare Workers Observability logs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Andrey Syschikov" }]
keywords = ["cloudflare", "workers", "logs", "observability", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
]
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.urls]
Repository = "https://github.com/asyschikov/cf-logs"
Issues = "https://github.com/asyschikov/cf-logs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cf-logs = "cf_logs:cli"
